[project]
name = "langchain-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-adk>=2.1.0",
    "google-cloud-logging>=3.15.0",
    "langchain-community>=0.4.2",
    "playwright",
    "uvicorn>=0.47.0",
    "wikipedia>=1.4.0",
]
